# picky

./: .gitignore  AGENTS.md  Cargo.toml  THEME.md  flake.nix  iced-best-practices  iced-best-practices-metadata.md  iced-best-practices-nix.md  iced-best-practices.md  iced-migration-checklist.md  iced-migration-lessons-learned.md  lessons-learned.md  metadata.md  relm4-best-practices.md  relm4-migration-checklist.md
src/: app.rs  fuzzy.rs  launcher.rs  main.rs  module.rs
src/modules/: applications.rs  chrome_tabs.rs  firefox_tabs.rs  mako_notifications.rs  mod.rs  niri_windows.rs  niri_workspaces.rs
